# libyb

./: .gitignore  CMakeLists.txt  Cratefile  libyb.pri  libyb.vcxproj  libyb.vcxproj.filters
libyb/: buffer.cpp  buffer.hpp  descriptor.cpp  descriptor.hpp  packet.hpp  packet_handler.hpp  stream_parser.cpp  stream_parser.hpp  tunnel.cpp  tunnel.hpp  vector_ref.hpp  yb.h
libyb/async/: async_channel.hpp  async_runner.cpp  async_runner.hpp  await.hpp  cancel_exception.hpp  cancel_level.hpp  cancellation_token.cpp  cancellation_token.hpp  channel.cpp  channel.hpp  console_stream.hpp  descriptor_reader.cpp  descriptor_reader.hpp  device.cpp  device.hpp  double_buffer.hpp  file.hpp  group.hpp  mock_stream.cpp  mock_stream.hpp  null_stream.cpp  null_stream.hpp  promise.hpp  resumable.hpp  runner.hpp  serial_port.cpp  serial_port.hpp  sigint.hpp  signal.cpp  signal.hpp  stream.cpp  stream.hpp  stream_device.cpp  stream_device.hpp  sync_runner.hpp  task.hpp  task_base.hpp  task_result.hpp  task_win32.cpp  task_win32.hpp  (+2 more)
libyb/async/detail/: cancel_level_upgrade_task.hpp  cancellation_token_task.hpp  canceller_task.hpp  channel_detail.hpp  circular_buffer.hpp  console_stream.cpp  double_buffer_task.hpp  exit_guard_task.cpp  exit_guard_task.hpp  linux_async_channel.cpp  linux_async_runner.cpp  linux_console_stream.cpp  linux_fdpoll_task.hpp  linux_group.cpp  linux_notification_event.cpp  linux_prepared_task.cpp  linux_serial_port.cpp  linux_sigint.cpp  linux_sync_runner.cpp  linux_timer.cpp  linux_wait_context.cpp  linux_wait_context.hpp  loop_task.hpp  notification_event.cpp  notification_event.hpp  parallel_composition_task.cpp  parallel_composition_task.hpp  parallel_compositor.cpp  parallel_compositor.hpp  parallel_compositor_impl.hpp  prepared_task.hpp  prepared_task_impl.hpp  promise_task.hpp  runner.cpp  runner_impl.hpp  runner_registry.cpp  runner_registry.hpp  semaphore.cpp  semaphore.hpp  sequential_composition_task.hpp  (+29 more)
libyb/net/: http.cpp  http.hpp  http_server.cpp  http_server.hpp  net.cpp  net.hpp
libyb/net/detail/: http_request_parser.cpp  http_request_parser.hpp  linux_net.cpp  win32_net.cpp
libyb/shupito/: escape_sequence.cpp  escape_sequence.hpp  flip2.cpp  flip2.hpp
libyb/usb/: bulk_stream.cpp  bulk_stream.hpp  interface_guard.cpp  interface_guard.hpp  usb.h  usb_context.hpp  usb_descriptors.cpp  usb_descriptors.hpp  usb_device.cpp  usb_device.hpp
libyb/usb/detail/: libusb0_win32_intf.h  linux_usb_context.cpp  linux_usb_device.cpp  linux_usb_device_core.hpp  udev.hpp  unix_usb_device_core.hpp  usb_device_core.hpp  usb_device_core_fwd.hpp  usb_request_context.cpp  usb_request_context.hpp  win32_usb_context.cpp  win32_usb_device.cpp  win32_usb_device_core.hpp
libyb/utils/: atomic.hpp  except.hpp  ihex_file.cpp  ihex_file.hpp  lexcast.hpp  noncopyable.hpp  range.hpp  refcount.hpp  signal.hpp  singleton.hpp  sparse_buffer.cpp  sparse_buffer.hpp  svf_file.cpp  svf_file.hpp  tuple_less.hpp  utf.cpp  utf.hpp
libyb/utils/detail/: lexcast_impl.hpp  linux_atomic.cpp  linux_event.cpp  linux_event.hpp  pthread_mutex.cpp  pthread_mutex.hpp  range.hpp  refcount.cpp  scoped_unix_fd.hpp  scoped_win32_handle.hpp  unix_refcount.cpp  unix_system_error.hpp  win32_atomic.cpp  win32_file_operation.cpp  win32_file_operation.hpp  win32_mutex.cpp  win32_mutex.hpp  win32_overlapped.cpp  win32_overlapped.hpp  win32_refcount.cpp  win32_singleton.cpp  win32_system_error.hpp
test/: cancel_level_upgrade_test.cpp  libyb_test.sln  libyb_test.vcxproj  libyb_test.vcxproj.filters  main.cpp  memmock.cpp  memmock.h  shupito_flash.cpp  singleton.cpp  test.cpp  test.h  test.pro  test.sln  test.vcxproj  test.vcxproj.filters  usb.cpp
